--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,17 @@
 		    <artifactId>hibernate-validator</artifactId>
 		    <version>6.1.0.Final</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
